b-Ocracy v1.0.0.23 - added donors and beta testers names, changed battle category font size to 80%, removed Harkeertan from guest graphic designers Attempting to fix chat hide on small screens Added cameron samuels 404 and index

--- a/bocracy/index.css
+++ b/bocracy/index.css
@@ -31,6 +31,7 @@
 				line-height: 100px;
 				vertical-align: middle;
 				text-align: center;
+				font-size: 80%;
 			}
 			a:not(.text) {
 				float: left;
